osha.theme Changelog
====================

1.2.31 (unreleased)
-------------------

- Nothing changed yet.


1.2.30 (2009-10-06)
-------------------

- Fixed query in browser.practical_solutions (deroiste)

1.2.29 (2009-10-05)
-------------------

- Googlesearch portlet: make the search field even smaller to allow room for the submit button (thomasw)

1.2.28 (2009-10-05)
----------------------

- Added advanced search to Practical Solution (deroiste)
- Added Publications to Practical Solutions portlet and adjusted ordering (deroiste)
- Fixed some css issues on IE6 and IE7 Practical Solution(s) and Topic(s) (deroiste)
- made Google search portlet smaller, ticket 387 (thomasw) 


1.2.27 (2009-09-30)
-------------------

- Use css to hide the OSHA Metadata widget on the BlogEntry edit form (jcbrand)
- Adding optional introductory text as an alternative to the linkcollection for
  Topic pages. #376 (de Roiste)
- Fixing some expectations in javascript #397 (Gerken)
- added osha's customised version of UberSelectionWidget. Only reason: to add an explanation
  on how to search using the "path:" operator #396 (thomasw)


1.2.26 (2009-09-29)
-------------------

- Fixed a naming bug in skins.xml concerning the new long name for the
  fckeditor directory (jcbrand)
- Add a new viewlet for the "Add This" social bookmarker. It will be visible on
  all IATNewsItem providers (jcbrand)
- Resized Practical Solutions images (de Roiste)

1.2.25 (2009-09-29)
-------------------

- Minor changes to fix breaking tests. (de Roiste)

osha.theme 1.2.24 (2009-09-28)
------------------------------

- Added the Practical Solution portlet, Issue 376. (de Roiste)
- Fixed wrong layer name (gerken)

osha.theme 1.2.23 (2009-09-28)
------------------------------

- A weird issue with tar files and python 2.4 breaks 1.2.22 release.
  See here for more information: http://bugs.python.org/issue7011
  A workaround has been applied and a skin name has been changed.